# google-ads-rag-agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
agent/: data_loader.py  decision_engine.py  issue_detector.py  kpi_analyzer.py  llm_recommender.py  rag_ingestion.py  rag_retriever.py
data/: campaigns.csv
data/knowledge/: bidding_strategies.txt  cpa_optimization.txt  ctr_optimization.txt
vectorstore/: chroma.sqlite3
